# yew-static-generation

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: yew-sg.yml
src/: app.rs  lib.rs  router.rs
src/page/: home.rs
