[package]
name = "pages"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
required-features = ["ssg"]

[[bin]]
name = "hydrate"
required-features = ["hydration"]

[dependencies]
async-recursion = "1.0.0"
async-std = "1.12.0"
stylist = { git = "https://github.com/futursolo/stylist-rs", version = "0.12.0", rev = "refs/pull/95/merge", features = ["yew_integration", "ssr", "hydration"] }
yew = { version = "0.20.0", features = ["ssr", "hydration"] }
yew-router = "0.17.0"

[features]
ssg = ["yew/ssr", "stylist/ssr"]
hydration = ["yew/hydration", "stylist/hydration"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.17"
wasm-logger = "0.2.0"
